Absolute positioning of elements to prevent flickering

--- a/src/components/number-converter/number-converter.component.scss
+++ b/src/components/number-converter/number-converter.component.scss
@@ -1,8 +1,7 @@
 :host {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+
   height: 90vh;
   gap: 10px;
 }
@@ -16,10 +15,12 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(74, 22, 22, 0.2);
+  font-size: large;
+  font-family: fantasy;
 }
 
 .number-input:hover {
-  box-shadow: 4px 8px 16px 0 rgb(149, 240, 240);
+  box-shadow: 4px 4px 16px 0 rgb(198, 162, 204);
 }
 
 .number-form {
@@ -28,5 +29,15 @@
   gap: 10px;
 }
 
-.result {
+.form-container {
+  position: absolute;
+  top: 42.5%;
+  left: 32.5%;
+}
+
+.result-container {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
